public-css-gal-2026.css
/* ... */
/* Schedule */
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__time-slot-header.is-empty {
	display: none;
}
.wordcamp-schedule .wordcamp-schedule__date {
	font-size: 48px;
	color: var(--wp--preset--color--accent-4);
}

/*
.wordcamp-schedule .wordcamp-schedule__day {
	background-color: #e6e6e6;
}
*/
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__column-header {
	background-color: var(--wp--preset--color--accent-3) !important;
	font-size: 16px;
	font-weight: 700;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__time-slot-header.is-empty {
	display: none !important;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__time-slot-header.has-sessions {
	color: var(--wp--preset--color--base-2);
	background-color: var(--wp--preset--color--accent-4) !important;
	font-size: 32px;
	font-weight: 500;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session {
	background-color: #e6e6e6;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-title,
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-title a {
	color: var(--wp--preset--color--accent-4);
	font-size: 26px;
	font-weight: 700;
	line-height: 1.2;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session,
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__time-slot-header {
/*border: 2px solid #fff !important;*/
	margin: 2px !important;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-title .dashicons-star-filled {
	color: #FBAF00;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-title .dashicons-star-filled:hover,
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-title .dashicons-star-filled:focus,
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session.wcb-favourite-session .wordcamp-schedule__session-title .dashicons-star-filled {
	color: var(--wp--preset--color--accent-4);
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-category dd {
	display: inline-block;
	padding-inline: 1em;
	margin-right: 1em;
	margin-top: 1em;
	background-color: var(--wp--preset--color--accent-3);
	color: var(--wp--preset--color--base);
	text-transform: uppercase;
	font-size: 14px;
	font-weight: 700;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-category dd::after {
	content: "";
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session .wordcamp-schedule__session-category dd+dd {
	background-color: #ff4c00;
	color: var(--wp--preset--color--base);
	font-weight: 500;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session-speakers,
.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session-speakers a {
	color: var(--wp--preset--color--accent-4);
	font-size: 21px;
	font-weight: 500;
}

.wordcamp-schedule .wordcamp-schedule__day .wordcamp-schedule__session.wcb-favourite-session {
	background-color: #e0f8ff;
}

/*** Sessions ***/
.single-wcb_session .taxonomy-wcb_session_category a {
	border-radius: 0;
	padding: 0 1em;
	margin-right: 1em;
}

.single-wcb_session .wp-block-post-excerpt__excerpt {
	text-align: left;
}

.single-wcb_session .taxonomy-wcb_session_category > a:first-child {
	background-color: var(--wp--preset--color--accent-3);
	color: var(--wp--preset--color--base-2);
	text-transform: uppercase;
	font-weight: bold;
	font-style: italic;
	padding-right: 24px;
	font-size: clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.488), 18px);
}

.single-wcb_session .taxonomy-wcb_session_category a:nth-of-type(2) {
	background-color: #ff4c00;
	color: var(--wp--preset--color--base);
	text-transform: uppercase;
	font-weight: bold;
	font-style: italic;
	font-size: clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.488), 18px);
}

.single-wcb_session .taxonomy-wcb_session_category .wp-block-post-terms__separator {
	display: none;
}

.single-wcb_session .wordcamp-speakers .wordcamp-speakers__title,
.single-wcb_session .wordcamp-speakers .wordcamp-speakers__title a {
	color: var(--wp--preset--color--accent-4);
	text-decoration: none;
}

.single-wcb_session .sesion-ponente-contenido .wordcamp-speakers + p {
	display: none;
}

.single-wcb_session .sesion-foto-ponente img {
	mask-image: url('https://galicia.wordcamp.org/2025/files/2025/05/mask-cuadrado.png');
	mask-size: 300px;
	mask-repeat: no-repeat;
	mask-position: center;
}


.wcb_session-template .taxonomy-wcb_session_category a,
.wcb_session-template .wp-block-wordcamp-session-speakers__name a,
.wcb_session-template .wp-block-wordcamp-session-date time {
	font-size: .9rem !important;
}

.wcgal-wrap-categories {
	display: flex;
	flex-wrap: wrap;
}

.wordcamp-schedule .wordcamp-schedule__date
{
    font-size: 38px;
    color: var(--wp--preset--color--accent-4);
    font-family: 'Love Ya Like A Sister';
}

/*** Speakers ***/
.single-wcb_speaker .wordcamp-sessions__title {
	margin-top: 0;
	padding-top: 20px;
}

.single-wcb_speaker .wordcamp-sessions__title a {
	color: var(--wp--preset--color--accent-4);
	font-weight: 700;
	text-decoration: none;
}

.single-wcb_speaker .wordcamp-sessions__details .wordcamp-sessions__time-location {
	background-color: var(--wp--preset--color--accent-4);
	color: var(--wp--preset--color--base-2);
	padding-inline: 1em;
	text-transform: uppercase;
	font-style: normal;
	margin-right: 5px;
}

.single-wcb_speaker .wordcamp-sessions__details .wordcamp-sessions__time-location,
.single-wcb_speaker .wordcamp-sessions__details .wordcamp-sessions__categories {
	display: inline-block;
	font-size: .875em;
}

.single-wcb_speaker .wordcamp-sessions__details .wordcamp-sessions__categories {
	visibility: hidden;
}
/* ... */

